--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,10 @@
 /* common css */
 
+     .radial-progress:before {
+          inset: 0px;
+          background: radial-gradient(farthest-side, currentColor 98%, #0000) top / var(--thickness) var(--thickness) no-repeat, conic-gradient(currentColor calc(var(--value)* 1%), #0000001f 0) !important;
+          mask: radial-gradient(farthest-side, #0000 calc(99% - var(--thickness)), #000 calc(100% - var(--thickness)));
+      }
 
 nav, section {
 
@@ -19,6 +24,24 @@ nav, section {
        background-color: black;
        color: white;
 }
+
+/* Hockey Club section */
+
+ hr{
+
+       border: 1px dashed #7b7b7b89;
+      
+}
+
+#hockeyClubSection h2{
+
+      font-weight: bold;
+      font-size: 1.5rem;
+      margin: 1rem 0;
+      
+}
+
+/* ========================== jQuary ====================== */
 
 /* nav */
 
