--- a/style/style.css
+++ b/style/style.css
@@ -103,6 +103,13 @@ form input, textarea{
      width: 100%;
 }
 
+footer h2{
+
+      font-weight: bold;
+      font-size: 1.3rem;
+      margin-bottom: 0.8rem;
+}
+
 /* ========================== jQuary ====================== */
 
 /* nav */
@@ -129,5 +136,9 @@ form input, textarea{
      width: 100%;
      margin-bottom: 1rem;
     
+  }
+  footer > div{
+
+      width: 100% !important;
   }
 }
